src/objects/Project_External_Reference__c.object
<CustomObject>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>External References</relationshipLabel>
        <relationshipName>External_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>External Reference</label>
    <nameField>
        <label>Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>